--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,37 @@ header img {
     background-color: aqua;
     font-size: 30px;
 }
+.separación{
+width: 100%;
+height: 40px;
+
+}
+
+.evidencia{
+    width: 100%;
+    height: 50px;
+    background-color: #d9a112;
+}
+.titulos2{
+    font-size: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    align-items: center;
+}
+
+.listaposti{
+    display: flex;
+    flex-direction: row;
+    width: 20px;
+    list-style: none;
+    justify-content:space-evenly;
+    align-items: center;
+}
+
+.imagenesposti{
+    width: 500px;
+    height: auto;
+    margin-left: 20px;
+    
+}
